@@ -34,6 +34,7 @@ Changes for 1.9.0
 
 Changes for 1.8.4rc3
 
+ - [ZBX-3294] fixed host status change confirmation dialog (Vedmak)
  - [ZBX-3301] fixed server crash after libssh2_userauth_list() when processing SSH checks (asaveljevs)
  - [ZBX-2395] fixed sending of the same message to the same user using different media types (asaveljevs)
  - [ZBXNEXT-586] added sensor[device,sensor,<mode>] check for Linux 2.4 (asaveljevs)
